k8s/frontend-svc-definition.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-controller-frontend
    role: service
  name: k8s-frontend-svc
  namespace: k8s-go-controller
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: k8s-controller-frontend
    role: frontend
  type: NodePort
status:
  loadBalancer: {}
